[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rosdep-oe"
dynamic = ["version"]
description = "rosdep package manager abstraction tool for ROS"
readme = "README.md"
requires-python = ">=3.6"
authors = [
    { name = "Tully Foote", email = "tfoote@osrfoundation.org" },
    { name = "Ken Conley" },
]
maintainers = [{ name = "openEuler ROS SIG" }]
keywords = ["ROS"]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
]
dependencies = [
    "catkin_pkg >= 0.4.0",
    "importlib_metadata; python_version<'3.8'",
    "PyYAML >= 3.1",
    "rosdistro >= 0.7.5",
    "rospkg-oe @ git+https://github.com/Grvzard/rospkg-oe.git@dev",
]

[project.optional-dependencies]
test = ["flake8 < 6", "flake8-comprehensions", "pytest"]

[project.scripts]
rosdep = "rosdep2.main:rosdep_main"
rosdep-source = "rosdep2.install:install_main"

[project.urls]
Homepage = "http://wiki.ros.org/rosdep"
"Issue tracker" = "https://github.com/ros-infrastructure/rosdep/issues"
"Source code" = "https://github.com/ros-infrastructure/rosdep"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/rosdep2/_version.py"

[tool.hatch.build.targets.sdist]
include = ["src/rosdep2"]

[tool.hatch.build.targets.wheel]
packages = ["src/rosdep2"]
